--- a/index.html
+++ b/index.html
@@ -10,209 +10,48 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #1A1A1A;
-      color: #FFFFFF;
-      padding: 20px;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px 0;
-      background: rgba(107, 72, 255, 0.1);
-      border-radius: 10px;
-      margin-bottom: 30px;
-    }
-    header img {
-      height: 60px;
-      margin-right: 15px;
-    }
-    header h1 {
-      font-size: 28px;
-      font-weight: 700;
-    }
-    .button-group {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      margin-bottom: 30px;
-      width: 100%;
-    }
-    button {
-      padding: 15px 30px;
-      font-size: 18px;
-      font-weight: 600;
-      background: #6B48FF;
-      color: #FFFFFF;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-      width: 90%;
-      max-width: 600px;
-      text-align: center;
-    }
-    button:hover {
-      background: #5439CC;
-      transform: translateY(-2px);
-    }
-    button:disabled {
-      background: #666666;
-      cursor: not-allowed;
-      transform: none;
-    }
-    .form {
-      display: none;
-      flex-direction: column;
-      gap: 20px;
-      background: #2A2A2A;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    }
-    .form h2 {
-      font-size: 24px;
-      font-weight: 600;
-      color: #6B48FF;
-    }
-    input, textarea, select {
-      padding: 10px;
-      font-size: 14px;
-      background: #EDEDED;
-      border: none;
-      border-radius: 6px;
-      color: #1A1A1A;
-      width: 100%;
-      max-width: 400px;
-    }
+    body { font-family: 'Poppins', sans-serif; background: #1A1A1A; color: #FFFFFF; padding: 20px; line-height: 1.6; }
+    .container { max-width: 1200px; margin: 0 auto; }
+    header { display: flex; align-items: center; justify-content: center; padding: 20px 0; background: rgba(107, 72, 255, 0.1); border-radius: 10px; margin-bottom: 30px; }
+    header img { height: 60px; margin-right: 15px; }
+    header h1 { font-size: 28px; font-weight: 700; }
+    .button-group { display: flex; flex-direction: column; align-items: center; gap: 20px; margin-bottom: 30px; width: 100%; }
+    button { padding: 15px 30px; font-size: 18px; font-weight: 600; background: #6B48FF; color: #FFFFFF; border: none; border-radius: 10px; cursor: pointer; transition: background 0.3s ease, transform 0.2s ease; width: 90%; max-width: 600px; text-align: center; }
+    button:hover { background: #5439CC; transform: translateY(-2px); }
+    button:disabled { background: #666666; cursor: not-allowed; transform: none; }
+    .form { display: none; flex-direction: column; gap: 20px; background: #2A2A2A; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); }
+    .form h2 { font-size: 24px; font-weight: 600; color: #6B48FF; }
+    input, textarea, select { padding: 10px; font-size: 14px; background: #EDEDED; border: none; border-radius: 6px; color: #1A1A1A; width: 100%; max-width: 400px; }
     textarea { resize: vertical; height: 150px; }
-    #signaturePad {
-      border: 2px solid #6B48FF;
-      background: #FFFFFF;
-      width: 300px;
-      height: 150px;
-      margin: 10px auto;
-      border-radius: 6px;
-    }
+    #signaturePad { border: 2px solid #6B48FF; background: #FFFFFF; width: 300px; height: 150px; margin: 10px auto; border-radius: 6px; }
     #clearSignature { background: #FF4444; }
     #clearSignature:hover { background: #CC3333; }
     #card-container { margin: 10px auto; min-height: 50px; }
     #paymentOptions { display: flex; flex-direction: column; align-items: center; gap: 10px; }
     #paymentOptions p { color: #EDEDED; font-size: 14px; }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: #2A2A2A;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    th, td {
-      padding: 12px;
-      text-align: left;
-      font-size: 14px;
-      border-bottom: 1px solid #3A3A3A;
-    }
+    table { width: 100%; border-collapse: collapse; background: #2A2A2A; border-radius: 8px; overflow: hidden; }
+    th, td { padding: 12px; text-align: left; font-size: 14px; border-bottom: 1px solid #3A3A3A; }
     th { background: #6B48FF; font-weight: 600; position: sticky; top: 0; z-index: 10; }
     td { color: #EDEDED; }
     .checkin-btn { background: #28A745; }
     .charge-btn { background: #FFC107; color: #1A1A1A; }
     .delete-btn { background: #808080; }
     .button-group button, .form button { width: auto; min-width: 150px; }
-    #headphoneIdsList, #dialogHeadphoneIdsList, #returnHeadphoneIdsList {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-      background: #3A3A3A;
-      border-radius: 6px;
-    }
-    #headphoneIdsList li, #dialogHeadphoneIdsList li, #returnHeadphoneIdsList li {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      border-bottom: 1px solid #4A4A4A;
-    }
+    #headphoneIdsList, #dialogHeadphoneIdsList, #returnHeadphoneIdsList { list-style: none; padding: 0; margin: 10px 0; background: #3A3A3A; border-radius: 6px; }
+    #headphoneIdsList li, #dialogHeadphoneIdsList li, #returnHeadphoneIdsList li { display: flex; justify-content: space-between; align-items: center; padding: 10px; border-bottom: 1px solid #4A4A4A; }
     .remove-btn { background: #DC3545; padding: 6px 12px; font-size: 12px; }
-    .dialog {
-      position: fixed;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #2A2A2A;
-      padding: 20px;
-      border-radius: 12px;
-      z-index: 1000;
-      display: none;
-      flex-direction: column;
-      gap: 15px;
-      max-width: 90%;
-      max-height: 80vh;
-      overflow-y: auto;
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
-    }
-    .dialog-header {
-      background: #6B48FF;
-      color: #FFFFFF;
-      padding: 10px;
-      font-size: 20px;
-      font-weight: 600;
-      border-radius: 8px 8px 0 0;
-      cursor: move;
-    }
-    .dialog-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 999;
-      display: none;
-    }
-    .loading-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 2000;
-    }
-    .spinner {
-      border: 8px solid #EDEDED;
-      border-top: 8px solid #6B48FF;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      animation: spin 1s linear infinite;
-    }
-    .dashboard-table-wrapper {
-      max-height: 400px;
-      overflow-y: auto;
-      overflow-x: auto;
-      width: 100%;
-    }
+    .dialog { position: fixed; top: 10%; left: 50%; transform: translateX(-50%); background: #2A2A2A; padding: 20px; border-radius: 12px; z-index: 1000; display: none; flex-direction: column; gap: 15px; max-width: 90%; max-height: 80vh; overflow-y: auto; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5); }
+    .dialog-header { background: #6B48FF; color: #FFFFFF; padding: 10px; font-size: 20px; font-weight: 600; border-radius: 8px 8px 0 0; cursor: move; }
+    .dialog-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); z-index: 999; display: none; }
+    .loading-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); display: none; justify-content: center; align-items: center; z-index: 2000; }
+    .spinner { border: 8px solid #EDEDED; border-top: 8px solid #6B48FF; border-radius: 50%; width: 60px; height: 60px; animation: spin 1s linear infinite; }
+    .dashboard-table-wrapper { max-height: 400px; overflow-y: auto; overflow-x: auto; width: 100%; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     @media (max-width: 768px) {
       header img { height: 40px; }
       header h1 { font-size: 22px; }
       .button-group { gap: 15px; }
-      button { 
-        width: 95%;
-        font-size: 16px;
-        padding: 12px 20px;
-      }
+      button { width: 95%; font-size: 16px; padding: 12px 20px; }
       .form { padding: 15px; }
       input, textarea, select { width: 100%; }
       table { font-size: 12px; }
@@ -359,6 +198,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     const squareAppId = 'sandbox-sq0idb-qaDoxfFQK3OfUWlaCrgkDw';
     let headphones = {};
     let usedHeadphoneIds = new Set();
+    let checkoutListIds = new Set();
     let signatureData = null;
     let payments;
     let cardElement;
@@ -407,7 +247,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
         snapshot.forEach(doc => {
           headphones[doc.id] = doc.data();
           if (headphones[doc.id].status === 'checked_out') {
-            usedHeadphoneIds.add(doc.id); // Only add IDs that are actually checked out
+            usedHeadphoneIds.add(doc.id);
           }
         });
         return headphones;
@@ -423,7 +263,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
         if (db && headphonesCollection) await headphonesCollection.doc(id).set(data);
         headphones[id] = data;
         if (data.status === 'checked_out') {
-          usedHeadphoneIds.add(id); // Add to usedHeadphoneIds only on successful save
+          usedHeadphoneIds.add(id);
         }
       } catch (error) {
         console.error('Error saving headphone:', error);
@@ -436,7 +276,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
         if (db && headphonesCollection) await headphonesCollection.doc(id).update(data);
         headphones[id] = { ...headphones[id], ...data };
         if (data.status === 'returned' || data.status === 'charged') {
-          usedHeadphoneIds.delete(id); // Remove from usedHeadphoneIds if returned or charged
+          usedHeadphoneIds.delete(id);
         }
       } catch (error) {
         console.error('Error updating headphone:', error);
@@ -451,6 +291,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           if (db && headphonesCollection) await headphonesCollection.doc(id).delete();
           delete headphones[id];
           usedHeadphoneIds.delete(id);
+          checkoutListIds.delete(id);
           alert(`Headphone ${id} deleted!`);
           updateDashboard();
         }
@@ -513,6 +354,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const li = document.createElement('li');
       li.innerHTML = `${id} <button class="remove-btn" onclick="removeHeadphoneId(this, '${id}')">Remove</button>`;
       list.appendChild(li);
+      checkoutListIds.add(id);
       document.getElementById('headphoneId').value = '';
     }
 
@@ -546,6 +388,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
     function removeHeadphoneId(button, id) {
       button.parentElement.remove();
+      checkoutListIds.delete(id);
     }
 
     function getHeadphoneIds(listId) {
@@ -572,7 +415,8 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
     function generateUniqueHeadphoneId() {
       const regex = /^HP\d{7}$/;
-      const existingIds = Array.from(usedHeadphoneIds).filter(id => regex.test(id));
+      const allIds = new Set([...usedHeadphoneIds, ...checkoutListIds]);
+      const existingIds = Array.from(allIds).filter(id => regex.test(id));
       let nextNum = 1;
       if (existingIds.length) {
         const maxNum = Math.max(...existingIds.map(id => parseInt(id.replace('HP', ''), 10)));
@@ -586,6 +430,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       initSignaturePad('signaturePad');
       await initializeSquare();
       document.getElementById('headphoneIdsList').innerHTML = '';
+      checkoutListIds.clear();
     }
 
     function showReturn() {
@@ -745,6 +590,11 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           button.disabled = false;
           return;
         }
+        if (checkoutListIds.has(userId)) {
+          alert(`ID ${userId} is already in your checkout list!`);
+          button.disabled = false;
+          return;
+        }
         id = userId;
       } else {
         id = prompt('Enter headphone ID (e.g., HP0000001):');
@@ -866,7 +716,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
         const controller = new AbortController();
         ndef.onreading = async event => {
           const nfcId = event.serialNumber;
-          const paymentToken = 'cnon:card-nonce-ok'; // Sandbox test nonce; replace with Square Reader SDK in production
+          const paymentToken = 'cnon:card-nonce-ok';
           await processPayment(paymentToken);
           controller.abort();
         };
@@ -1193,6 +1043,7 @@ The SE2 Silent Disco Team
       if (formId === 'checkout') {
         document.getElementById('card-container').innerHTML = '';
         document.getElementById('headphoneIdsList').innerHTML = '';
+        checkoutListIds.clear();
         initializeSquare();
       } else if (formId === 'return') document.getElementById('returnHeadphoneIdsList').innerHTML = '';
     }
