--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     #paymentOptions{display:flex;flex-direction:column;align-items:center;gap:10px;}
     #paymentOptions p{color:#EDEDED;font-size:14px;}
     table{width:100%;border-collapse:collapse;background:#2A2A2A;border-radius:8px;overflow:hidden;}
-    th,td{padding:8px;text-align:left;font-size:12px;border-bottom:1px solid #3A3A3A;} /* Reduced padding and font size */
+    th,td{padding:8px;text-align:left;font-size:12px;border-bottom:1px solid #3A3A3A;}
     th{background:#6B48FF;font-weight:600;position:sticky;top:0;z-index:10;}
     td{color:#EDEDED;}
     .checkin-btn{background:#28A745;}
@@ -45,9 +45,9 @@
     .dialog-overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.7);z-index:999;display:none;}
     .loading-overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5);display:none;justify-content:center;align-items:center;z-index:2000;}
     .spinner{border:8px solid #EDEDED;border-top:8px solid #6B48FF;border-radius:50%;width:60px;height:60px;animation:spin 1s linear infinite;}
-    .dashboard-table-wrapper, .return-table-wrapper{max-height:500px;overflow-y:auto;overflow-x:auto;width:100%;} /* Increased height for more visibility */
+    .dashboard-table-wrapper, .return-table-wrapper{max-height:500px;overflow-y:auto;overflow-x:auto;width:100%;}
     .dashboard-actions, .return-actions{margin:20px 0;display:flex;gap:10px;justify-content:center;}
-    #reportOutput table{max-width:100%;overflow-x:auto;display:block;} /* Ensure reports table scrolls */
+    #reportOutput table{max-width:100%;overflow-x:auto;display:block;}
     @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
     @media (max-width:768px){
       header img{height:40px;}
@@ -414,7 +414,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     async function scanNFCStatus() {
       toggleForms('nfcStatus');
       const resultElement = document.getElementById('nfcStatusResult');
-      resultElement.textContent = 'Scanning...';
+      resultElement.textContent = 'Scanning... Press back or close to stop.';
       if (!('NDEFReader' in window)) {
         resultElement.textContent = 'NFC not supported.';
         return;
@@ -422,16 +422,13 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const ndef = new NDEFReader();
       try {
         await ndef.scan();
-        const controller = new AbortController();
-        let scannedCount = 0;
-        let lastScanTime = Date.now();
-
+        let output = '';
         ndef.onreading = event => {
           const nfcId = event.serialNumber.toLowerCase();
           const matchingHeadphone = Object.entries(headphones).find(([_, hp]) => hp.nfcId && hp.nfcId.toLowerCase() === nfcId);
           if (matchingHeadphone) {
             const [id, hp] = matchingHeadphone;
-            resultElement.innerHTML = `
+            output += `
               <strong>ID:</strong> ${id}<br>
               <strong>NFC ID:</strong> ${hp.nfcId || 'N/A'}<br>
               <strong>Status:</strong> ${hp.status === 'checked_out' ? 'Checked Out' : hp.status === 'returned' ? 'Returned' : 'Charged'}<br>
@@ -441,27 +438,14 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
               <strong>Preauth Status:</strong> ${hp.pre_auth ? 'Hold' : 'Released'}<br>
               <strong>Entry Method:</strong> ${hp.entryMethod || 'N/A'}<br>
               <strong>Date:</strong> ${hp.agreement.date || 'N/A'}<br>
-              <strong>Group ID:</strong> ${hp.groupId || 'Single'}
+              <strong>Group ID:</strong> ${hp.groupId || 'Single'}<br><hr>
             `;
-            scannedCount++;
+            resultElement.innerHTML = output;
           }
-          lastScanTime = Date.now();
         };
-
         ndef.onreadingerror = () => {
-          resultElement.textContent = 'NFC scan failed. Try again.';
+          resultElement.innerHTML += '<br>Error reading NFC tag. Try again.';
         };
-
-        const timeoutCheck = setInterval(() => {
-          if (Date.now() - lastScanTime >= 10000) {
-            controller.abort();
-            clearInterval(timeoutCheck);
-            if (scannedCount === 0) resultElement.textContent = 'Scan timed out. No tags detected.';
-            else resultElement.innerHTML += '<br>Scanning complete.';
-          }
-        }, 500);
-
-        await new Promise(resolve => controller.signal.addEventListener('abort', resolve));
       } catch (error) {
         resultElement.textContent = `Error: ${error.message}`;
       }
@@ -488,11 +472,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const ndef = new NDEFReader();
       try {
         await ndef.scan();
-        alert('Scanning NFC tags... Scan each headphone to add. Scanning stops after 10 seconds of no activity.');
-        const controller = new AbortController();
-        let scannedCount = 0;
-        let lastScanTime = Date.now();
-
+        alert('Scanning NFC tags... Scan each headphone to add. Stop by navigating away.');
         ndef.onreading = event => {
           const nfcId = event.serialNumber.toLowerCase();
           const id = generateUniqueHeadphoneId();
@@ -507,37 +487,19 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
             li.innerHTML = `${id} <button class="remove-btn" onclick="removeHeadphoneId(this,'${id}')">Remove</button>`;
             list.appendChild(li);
             checkoutListIds.add(id);
-            scannedCount++;
             alert(`Headphone ${id} with NFC ID ${nfcId} added to checkout list.`);
           }
           input.value = '';
           input.dataset.nfcId = nfcId;
           input.dataset.entryMethod = 'NFC';
-          lastScanTime = Date.now();
         };
-
         ndef.onreadingerror = () => {
           alert('Error reading NFC tag. Try again or enter manually.');
         };
-
-        const timeoutCheck = setInterval(() => {
-          if (Date.now() - lastScanTime >= 10000) {
-            controller.abort();
-            clearInterval(timeoutCheck);
-            if (scannedCount === 0) {
-              alert('NFC scan timed out with no tags added. Enter manually if needed.');
-              manualEntry('checkout');
-            } else {
-              alert(`NFC scan complete. ${scannedCount} headphone(s) added.`);
-            }
-            button.disabled = false;
-          }
-        }, 500);
-
-        await new Promise(resolve => controller.signal.addEventListener('abort', resolve));
       } catch (error) {
         alert(`NFC scan failed: ${error.message}. Enter ID manually.`);
         manualEntry('checkout');
+      } finally {
         button.disabled = false;
       }
     }
@@ -579,11 +541,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const ndef = new NDEFReader();
       try {
         await ndef.scan();
-        alert('Scanning NFC tags... Scan each headphone to return. Scanning stops after 10 seconds of no activity.');
-        const controller = new AbortController();
-        let scannedCount = 0;
-        let lastScanTime = Date.now();
-
+        alert('Scanning NFC tags... Scan each headphone to return. Stop by navigating away.');
         ndef.onreading = event => {
           const nfcId = event.serialNumber.toLowerCase();
           const matchingHeadphone = Object.entries(headphones).find(([_, hp]) => 
@@ -594,35 +552,18 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
             const checkbox = document.querySelector(`input[name="checkinHeadphone"][value="${id}"]`);
             if (checkbox) {
               checkbox.checked = true;
-              scannedCount++;
               alert(`Headphone ${id} with NFC ID ${nfcId} selected for return.`);
             } else {
               alert(`Headphone ${id} with NFC ID ${nfcId} is checked out but not in the current dashboard view. Adjust filters or search to include it.`);
             }
           }
-          lastScanTime = Date.now();
         };
-
         ndef.onreadingerror = () => {
           alert('Error reading NFC tag. Please try again or manually select headphones.');
         };
-
-        const timeoutCheck = setInterval(() => {
-          if (Date.now() - lastScanTime >= 10000) {
-            controller.abort();
-            clearInterval(timeoutCheck);
-            if (scannedCount === 0) {
-              alert('NFC scan timed out with no tags detected. Please manually select the headphones to return.');
-            } else {
-              alert(`NFC scan complete. ${scannedCount} headphone(s) selected. Click "Return Selected" to proceed.`);
-            }
-            button.disabled = false;
-          }
-        }, 500);
-
-        await new Promise(resolve => controller.signal.addEventListener('abort', resolve));
       } catch (error) {
         alert(`NFC scan failed: ${error.message}. Please manually select headphones to return.`);
+      } finally {
         button.disabled = false;
       }
     }
@@ -638,11 +579,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const ndef = new NDEFReader();
       try {
         await ndef.scan();
-        alert('Scanning NFC tags... Scan each headphone to return. Scanning stops after 10 seconds of no activity.');
-        const controller = new AbortController();
-        let scannedCount = 0;
-        let lastScanTime = Date.now();
-
+        alert('Scanning NFC tags... Scan each headphone to return. Stop by navigating away.');
         ndef.onreading = event => {
           const nfcId = event.serialNumber.toLowerCase();
           const matchingHeadphone = Object.entries(headphones).find(([_, hp]) => 
@@ -653,35 +590,18 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
             const checkbox = document.querySelector(`input[name="returnHeadphone"][value="${id}"]`);
             if (checkbox) {
               checkbox.checked = true;
-              scannedCount++;
               alert(`Headphone ${id} with NFC ID ${nfcId} selected for return.`);
             } else {
               alert(`Headphone ${id} with NFC ID ${nfcId} is checked out but not in the current view. Adjust search to include it.`);
             }
           }
-          lastScanTime = Date.now();
         };
-
         ndef.onreadingerror = () => {
           alert('Error reading NFC tag. Please try again or manually select headphones.');
         };
-
-        const timeoutCheck = setInterval(() => {
-          if (Date.now() - lastScanTime >= 10000) {
-            controller.abort();
-            clearInterval(timeoutCheck);
-            if (scannedCount === 0) {
-              alert('NFC scan timed out with no tags detected. Please manually select the headphones to return.');
-            } else {
-              alert(`NFC scan complete. ${scannedCount} headphone(s) selected. Click "Return Selected" to proceed.`);
-            }
-            button.disabled = false;
-          }
-        }, 500);
-
-        await new Promise(resolve => controller.signal.addEventListener('abort', resolve));
       } catch (error) {
         alert(`NFC scan failed: ${error.message}. Please manually select headphones to return.`);
+      } finally {
         button.disabled = false;
       }
     }
@@ -1365,4 +1285,8 @@ The SE2 Silent Disco Team
       document.addEventListener('mouseup', stopDragging);
       header.addEventListener('touchstart', startDragging);
       document.addEventListener('touchmove', drag);
-      document.addEventListener('touchend',
+      document.addEventListener('touchend', stopDragging);
+    }
+  </script>
+</body>
+</html>
